K1J-1527: LogsenderIT integration tests, with DLQ tests