@@ -19,38 +19,54 @@ public class TestabilityUtil {
   }
 
   /**
-   * Wait for a specific log message to be processed by checking the stub store.
-   */
-  public LogType awaitProcessed(String logId, Duration timeout) {
-    await()
-        .atMost(timeout)
-        .pollInterval(Duration.ofMillis(200))
-        .until(() -> {
-              final var resp = getLogById(logId);
-              return resp.getStatusCode().is2xxSuccessful() && resp.getBody() != null;
-            }
-        );
-    return getLogById(logId).getBody();
-  }
-
-  /**
    * Wait for the stub to have received a specific number of messages.
    */
   public void awaitMessageCount(int expectedCount, Duration timeout) {
     await()
         .atMost(timeout)
         .pollInterval(Duration.ofMillis(200))
-        .until(() -> getMessageCount() >= expectedCount);
+        .failFast(() -> {
+          return false; // Never fail fast, just used for logging
+        })
+        .untilAsserted(() -> {
+          int actualCount = getMessageCount();
+          if (actualCount < expectedCount) {
+            var logs = getAllLogs();
+            String logDetails = "";
+            if (logs.getBody() != null && logs.getBody().length > 0) {
+              logDetails = "\nReceived log IDs: " +
+                  java.util.Arrays.stream(logs.getBody())
+                      .map(LogType::getLogId)
+                      .collect(java.util.stream.Collectors.joining(", "));
+            }
+            throw new AssertionError(
+                String.format(
+                    "Expected %d messages in stub, but found %d after waiting %s.%s",
+                    expectedCount, actualCount, timeout, logDetails
+                )
+            );
+          }
+        });
   }
 
   /**
-   * Get a specific log message from the stub by log ID.
+   * Wait for the stub to have received a specific number of batches.
    */
-  public ResponseEntity<LogType> getLogById(String logId) {
-    return restTemplate.getForEntity(
-        "http://localhost:%s/api/loggtjanst-api/logs/%s".formatted(port, logId),
-        LogType.class
-    );
+  public void awaitBatchCount(int expectedCount, Duration timeout) {
+    await()
+        .atMost(timeout)
+        .pollInterval(Duration.ofMillis(200))
+        .untilAsserted(() -> {
+          int actualCount = getBatchCount();
+          if (actualCount < expectedCount) {
+            throw new AssertionError(
+                String.format(
+                    "Expected %d batches in stub, but found %d after waiting %s.",
+                    expectedCount, actualCount, timeout
+                )
+            );
+          }
+        });
   }
 
   /**
@@ -81,14 +97,50 @@ public class TestabilityUtil {
     restTemplate.delete(
         "http://localhost:%s/api/loggtjanst-api/logs".formatted(port)
     );
+    setStubOnline();
+    setErrorState("NONE");
   }
 
   /**
-   * Get stub state (for debugging).
+   * Get the batch count (number of times storeLog was called).
    */
-  public ResponseEntity<JsonNode> getState() {
-    return restTemplate.getForEntity(
-        "http://localhost:%s/api/loggtjanst-api/state".formatted(port),
+  public int getBatchCount() {
+    final var resp = restTemplate.getForEntity(
+        "http://localhost:%s/api/loggtjanst-api/batch-count".formatted(port),
+        JsonNode.class
+    );
+    if (resp.getStatusCode().is2xxSuccessful() && resp.getBody() != null) {
+      return resp.getBody().get("batchCount").asInt();
+    }
+    return 0;
+  }
+
+  /**
+   * Set stub error state (NONE, ERROR, VALIDATION).
+   */
+  public void setErrorState(String errorType) {
+    restTemplate.getForEntity(
+        "http://localhost:%s/api/loggtjanst-api/error/%s".formatted(port, errorType),
+        JsonNode.class
+    );
+  }
+
+  /**
+   * Set stub offline (will reject all requests).
+   */
+  public void setStubOffline() {
+    restTemplate.getForEntity(
+        "http://localhost:%s/api/loggtjanst-api/offline".formatted(port),
+        JsonNode.class
+    );
+  }
+
+  /**
+   * Set stub online (will accept requests).
+   */
+  public void setStubOnline() {
+    restTemplate.getForEntity(
+        "http://localhost:%s/api/loggtjanst-api/online".formatted(port),
         JsonNode.class
     );
   }
